src/test/run-pass/fn-bare-coerce-to-block.rs
fn bare() {}

fn likes_block(f: fn()) { f() }

fn main() {
    likes_block(bare);
}