src/test/compile-fail/crust-no-call.rs
// error-pattern:expected function or foreign function but found *u8
crust fn f() {
}

fn main() {
    f();
}